--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,5 +1,5 @@
 // ================ start footer Area =================
-footer.footer-area.section-gap
+section.footer-area.section-gap
   .container
     .row
       .col-xl-2.col-sm-6.mb-4.mb-xl-0.single-footer-widget
