--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -16,7 +16,7 @@ header.header_area
   .main_menu
     nav.navbar.navbar-expand-lg.navbar-light
       .container.box_1620
-        a.navbar-brand.logo_h(href='index.html')
+        a.navbar-brand.logo_h(href='/')
           img(src='img/logo.png' alt='')
         button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
           span.icon-bar
